--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "~bootstrap/dist/css/bootstrap.css";
+@font-face {
+    font-family: 'thin-font';
+    src: url('/assets/thin/Quicksand-Light.ttf') format('truetype');
+}
+
+html,
+body {
+    margin: 0px !important;
+    padding: 0px;
+    font-family: "thin-font";
+}
