--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -68,6 +68,7 @@ header {
     height: 20px;
     font-weight: bolder;
     border-radius: 10px;
+    font-size: 14px;
     position: absolute;
     padding: 0px 6px;
     background-color: #f31e1e;
